--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Armillotta Lorenzo - Macelleria & AI</title>
-
+ 
     <!-- Importazione Google Font (Montserrat per i titoli, Lato per il testo) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -230,6 +230,12 @@
                     </li>
                     <li>
                         <a href="Riordino Automatico Finale.html">Riordino Automatico</a>
+                    </li>
+                     <li>
+                        <a href="https://desparlabmacelleria2025.netlify.app/" target="_blank">Esperienza Despar Lab Macelleria 2025 (Italiano)</a>
+                    </li>
+                    <li>
+                        <a href="https://desparlabmac2025de.netlify.app/" target="_blank">Esperienza Despar Lab Macelleria 2025 (Tedesco)</a>
                     </li>
                     <li>
                         <div class="audio-container">
